--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <div style="width: 800px; margin: 10px auto; font-family: sans-serif;
-        font-size: 20px"><p>This domain belongs to John Macdonald. You can contact him at john@johnmacdonald.org</p></div>
+        font-size: 20px; text-align: center">
+        <p>This domain belongs to John Macdonald. You can contact him at
+        john@johnmacdonald.org</p>
+    </div>
   </body>
 </html>
 
