--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>title</title>
   </head>
   <body>
-    <div style="width: 800px; margin: 10px auto; font-family: sans-serif;
-        font-size: 20px; text-align: center">
+    <div style="width: 800px; margin: 0 auto; font-family: sans-serif;
+        font-size: 20px; text-align: center; line-height: 30px">
         <p>This domain belongs to John Macdonald. You can contact him at
         john@johnmacdonald.org</p>
     </div>
