Add title; revise text

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>John Macdonald</title>
   </head>
   <body>
     <div style="width: 800px; margin: 0 auto; font-family: sans-serif;
         font-size: 20px; text-align: center; line-height: 30px">
-        <p>This domain belongs to John Macdonald. You can contact him at
-        john@johnmacdonald.org</p>
+        <p>The domain name johnmacdonald.org belongs to John Macdonald. You can
+        contact him at john@johnmacdonald.org</p>
     </div>
   </body>
 </html>
