Host video externally on YouTube

--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@
       <iframe width="800px" height="450px" src="https://www.youtube.com/embed/V-gOZzkITTU?rel=0" frameborder="0" allowfullscreen></iframe>
       <h3>Software Overview Video</h3>
       <p>Video of the Artemis AUV operating autonomously at the RoboSub competition, and in simulation. The robot has to complete an underwater obstable course, including sorting colored tubes, firing small projectiles at targets, ramming into colored buoys, and passing through a field goal.</p>
-      <video controls width=800 height=600>
-           <source src="videos/cuauv.mp4" type="video/mp4">
-      </video>
+      <iframe width="800" height="600" src="https://www.youtube.com/embed/Jfacv7x9poY" frameborder="0" gesture="media" allowfullscreen></iframe>
 
       <h2>Skynet Jr.</h2>
       <h3>Pesonal Involvement</h3>
@@ -203,9 +201,7 @@
       <h3>Competition Video</h3>
 <iframe width="800" height="400" src="https://www.youtube.com/embed/KB5b_M7Ps2Y" frameborder="0" allowfullscreen></iframe>
       <h3>Torpedoes Task Video</h3>
-      <video controls width=800 height=600>
-           <source src="videos/thor_auv_torpedoes.mp4" type="video/mp4">
-      </video>
+      <iframe width="800" height="400" src="https://www.youtube.com/embed/GOj6JVd1Q9E" frameborder="0" gesture="media" allowfullscreen></iframe>
 
       <h3>Gallery</h3>
       <div class="camera_wrap fluid_container camera_azure_skin" id="thorloki-camera">
