Add torpedoes vision gui image, add fonts, resize images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>John Macdonald</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro" rel="stylesheet">
+
     <script type='text/javascript' src='js/jquery.min.js'></script>
     <script type='text/javascript' src='js/jquery.mobile.customized.min.js'></script>
     <script type='text/javascript' src='js/jquery.easing.1.3.js'></script> 
@@ -205,17 +207,21 @@
 
       <h3>Gallery</h3>
       <div class="camera_wrap fluid_container camera_azure_skin" id="thorloki-camera">
-          <div data-src="images/thor_crane_below.jpg">
+          <div data-src="images/thor_crane_below_resize.jpg">
                 <div class="camera_caption fadeFromBottom">Thor being lifted into the competition pool by the crane.</div>
           </div>
-          <div data-src="images/thor_debug.png">
+          <div data-src="images/torpedoes_vision_gui.png">
+                <div class="camera_caption fadeFromBottom">Visualization of the
+                torpedoes task algorithm executing in real-time.</div>
+          </div>
+          <div data-src="images/thor_debug_resize.png">
                 <div class="camera_caption fadeFromBottom">Thor being debugged via the shared memory editor and plotter.</div>
           </div>
-          <div data-src="images/thor_bins_sim.png">
+          <div data-src="images/thor_bins_sim_resize.png">
                 <div class="camera_caption fadeFromBottom">Thor testing mission
                 logic inside of the custom simulator.</div>
           </div>
-          <div data-src="images/thor_sim.png">
+          <div data-src="images/thor_sim_resize.png">
                 <div class="camera_caption fadeFromBottom">Thor exploring the
                   simulator.</div>
           </div>
