--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <script type='text/javascript' src='js/camera.min.js'></script> 
     <link rel='stylesheet' id='camera-css'  href='css/camera.css' type='text/css' media='all'> 
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109652169-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-109652169-1');
+    </script>
     <script type="text/javascript">
       $( document ).ready(function() {
         jQuery('#beam-camera').camera({
