--- a/index.html
+++ b/index.html
@@ -150,9 +150,16 @@
       <h3>Competition Video</h3>
       <p>Video produced for the competition, giving an overview of the team's entry, as per the competition requirements. The video won the "Best Video" award.
       <iframe width="800px" height="450px" src="https://www.youtube.com/embed/V-gOZzkITTU?rel=0" frameborder="0" allowfullscreen></iframe>
+
       <h3>Software Overview Video</h3>
       <p>Video of the Artemis AUV operating autonomously at the RoboSub competition, and in simulation. The robot has to complete an underwater obstable course, including sorting colored tubes, firing small projectiles at targets, ramming into colored buoys, and passing through a field goal.</p>
       <iframe width="800" height="600" src="https://www.youtube.com/embed/Jfacv7x9poY" frameborder="0" gesture="media" allowfullscreen></iframe>
+      <h3>Indoor Visual Odometry Demo</h3>
+      This is a demonstration of the visual odometery algorithm being tested in
+      an indoor environment. Movement of reflections and shadows from waves on
+      the surface of the water unfortunately limits the usefulness of the
+      algorithm underwater.
+      <iframe width="800" height="450" src="https://www.youtube.com/embed/FRSd12OvMlI" frameborder="0" gesture="media" allowfullscreen></iframe>
 
       <h2>Skynet Jr.</h2>
       <h3>Pesonal Involvement</h3>
