--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>John Macdonald</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 
@@ -11,8 +11,15 @@
     <script type='text/javascript' src='js/jquery.mobile.customized.min.js'></script>
     <script type='text/javascript' src='js/jquery.easing.1.3.js'></script> 
     <script type='text/javascript' src='js/camera.min.js'></script> 
-    <link rel='stylesheet' id='camera-css'  href='css/camera.css' type='text/css' media='all'> 
 
+    <script type='text/javascript' src='js/responsive_youtube.js'></script>
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+
+    <link rel='stylesheet' id='camera-css'  href='css/camera.css' type='text/css' media='all'> 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109652169-1"></script>
@@ -25,8 +32,12 @@
     </script>
     <script type="text/javascript">
       $( document ).ready(function() {
+
+        var width = $('#content').width();
+
         jQuery('#beam-camera').camera({
-            height: '600px',
+            width: width + 'px',
+            height: parseInt(width * 0.75) + 'px',
             pagination: true,
             thumbnails: false,
             navigation: true,
@@ -37,7 +48,8 @@
 
 
         jQuery('#skynet-camera').camera({
-            height: '600px',
+            width: width + 'px',
+            height: parseInt(width * 0.75) + 'px',
             pagination: true,
             thumbnails: false,
             navigation: true,
@@ -47,7 +59,8 @@
         });
 
         jQuery('#thorloki-camera').camera({
-            height: '600px',
+            width: width + 'px',
+            height: parseInt(width * 0.75) + 'px',
             pagination: true,
             thumbnails: false,
             navigation: true,
@@ -59,10 +72,13 @@
     </script>
   </head>
   <body>
-    <div class="content">
-      <h1>Robotics Project Portfolio</h1>
-      <span class="subtitle">John Macdonald</span>
-      <p>The following is a portfolio of the robots I've worked on in college, including some pictures and videos as well. Hope you enjoy!</p>
+    <div class="content" id="content">
+      <h1 class='title'>John Macdonald</h1>
+      <span class='subtitle'>Working super hard to bring the benefits of robots
+        to people.</span><br>
+      <hr>
+      <h1 id="robots">Robots</h1>
+      <p>These are some of the robots I've worked on recently, including some pictures and videos as well. Hope you enjoy!</p>
       <h2>Beam</h2>
       <h3>Robot</h3>
       <ul>
