--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
       <span class='subtitle'>Working super hard to bring the benefits of robots
         to people.</span><br>
       <hr>
+      <p> Currently assisting with research in the Robotic Personal Assistants
+      Lab at Cornell. Graduating with
+      a BS in Computer Science in May, and heading to Carnegie Mellon for a
+      MS in Robotic Systems Development after. Machine shop certified.</p>
+
       <h1 id="robots">Robots</h1>
       <p>These are some of the robots I've worked on recently, including some pictures and videos as well. Hope you enjoy!</p>
       <h2>Beam</h2>
