Add links in place of formal education info

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
       <h1 class='title'>John Macdonald</h1>
       <span class='subtitle'>Working super hard to bring the benefits of robots
         to people.</span><br>
+      <a href="https://www.linkedin.com/in/john-joseph-macdonald/">LinkedIn</a>
+      &#183;
+      <a href="https://twitter.com/jnmacdnld">Twitter</a>
+      <br>
       <hr>
 
       <p>These are some of the robots I've worked on recently, including some pictures and videos as well. Hope you enjoy!</p>
