Update involvement in RPAL

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h3>Personal Involvement</h3>
       <ul>
         <li>Role: Undergraduate Research Assistant</li>
-        <li>Timeframe: September 2017 – Present</li>
+        <li>Timeframe: September 2017 – May 2018</li>
         <li>Highlights:
             <ul>
             <li>Working on improving frame-to-frame people correspondence for people tracker</li>
