--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <body>
     <div class="content" id="content">
       <h1 class='title'>John Macdonald</h1>
-      <span class='subtitle'>Working super hard to bring the benefits of robots
+      <span class='subtitle'>Super excited about robotics and working hard to bring the benefits of robots
         to people.</span><br>
       <a href="https://twitter.com/jnmacdnld">Twitter</a>
       &#183;
