--- a/projects/artemis-apollo/index.html
+++ b/projects/artemis-apollo/index.html
@@ -175,7 +175,7 @@ enough time to get decent grades in classes. Leading the software team was one t
 challenging, experience I have had thus far.</p>
 
 <p>I emphasized early integration and system-level testing. Our team had
-previously focused on task-level testing (such as, sorting of colored objects or shooting projectiles at targets. This lead to undiscovered
+previously focused on task-level testing (such as, sorting of colored objects or shooting projectiles at targets). This lead to undiscovered
 failure modes when the vehicle executed sequences of tasks. One such failure mode, paired with an unduly strong
 assuption about course setup, directly lead to a sub-par performance
 in the RoboSub 2016 Finals and our placing third rather than first. Obviously, it was my goal for the team to place first, so this sort of failure was not acceptable.</p>
@@ -205,17 +205,17 @@ those that did, still enabling the benefits of a dual vehicle strategy while mai
 <p>I therefore shifted from doing long-term research work to more short-term (6 month time horizon) work, and urged other team members to do the same. In one case, I had to de-scope a project to replace the vehicle operating system, which a team member strongly felt should be included. Trying to be delicate in this so as to balance the need for vehicle reliability and not discouraging innovation was the most challenging leadership decision I have ever made, and one which I did not take lightly. (It is now clear to me that had I not done this, the platform would not have been stable, and we would not have ultimately won the competition.)</p>
 
 <p>In particular, I focused on writing software to compensate
-for noise in our acoustic sensors needed for pinger localization. (I was able to due this using, suprsingly, single-linkage clustering of incoming data to differentiate the correct data from outliers). At the same
+for noise in our acoustic sensors needed for pinger localization and increase the speed at which the vehicle tracked pingers by roughly a factor of ten. (I was able to due this using, suprsingly, single-linkage clustering of incoming data to differentiate the correct data from outliers, an approach which had worked in the past.) At the same
 time, I coordinated and worked on cross-subteam fixes to deal with
 minisub control instability caused by (1) our magentometer detecting
 electromagnetic interference from upgraded thrusters and
 (2) forward thrusters which exterted too much torque about the vehicle
-center of mass. A combination of fabricating mounts to move thrusters, modifying our Kalman filter, and ignoring our magentometer for sensor fusion solved the issue.</p>
+center of mass, creating roll and pitch moments which other thrusters were not able to counteract. A combination of fabricating mounts to move thrusters, modifying our Kalman filter, and ignoring our magentometer for sensor fusion solved the issue.</p>
 
 <p>With the work the team did over
 the summer (which I can take zero credit for, as I was interning at iRobot during this time), we managed to place first in RoboSub 2017. We achieved a
 semi-finals score which was higher than the next best team by a factor
-of more than two, which was truly incredible. I was incredibly priveleged to have such a great team. Seeing both vehicles working
+of more than two (I believe the actual number was close to a factor of ten), which was truly incredible. I was incredibly priveleged to have such a great team. Seeing both vehicles working
 flawlessly in paralell was a moment I will never forget.</p>
 
 
