--- a/projects/skynet-jr/index.html
+++ b/projects/skynet-jr/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/style.css" type="text/css">
   <link rel="stylesheet" href="/css/3-col-portfolio.css" type="text/css">
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 
   <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro" rel="stylesheet">
 
