--- a/projects/beam/index.html
+++ b/projects/beam/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>John Macdonald</title>
+  <title></title>
   <link rel="stylesheet" href="/css/style.css" type="text/css">
   <link rel="stylesheet" href="/css/3-col-portfolio.css" type="text/css">
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-
   <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro" rel="stylesheet">
 
   <script type='text/javascript' src='/js/jquery.min.js'></script>
@@ -38,13 +36,13 @@
   <link rel='stylesheet' href='/css/carosel.css' type='text/css' media='all'> 
 
   
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109652169-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id="></script>
   <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'UA-109652169-1');
+  gtag('config', '');
   </script>
 </head>
 
@@ -182,7 +180,6 @@ ROS robot in real-time. I designed and implemented an architecure which enabled
 modular swapping of
 different person perception and social navigation algorithms in order to gauge
 real-world performance.</p>
-
 <p>In order to compare a range on algorithms, some which
 assumed certain motion constraints and some which did not, we converged on
 defining the action which an algorithm
@@ -191,12 +188,10 @@ into wheel velocities using a feedback linearization approach. Additional
 constraints e.g. velocity magnitude constraint could be enforced by the
 framework
 in order to suit the platform being used.</p>
-
 <p>I also implemented the lab&rsquo;s novel Social Momentum algorithm inside this
 framework, as well as Optimal Reciprocal Collision Avoidance (ORCA) using the RVO library in order to demonstrate the
 interopability of the framework, as well as to enable comparison between
 different algorithms.</p>
-
 <p>The social navigation framework which I designed and implemented was used to
 conduct experiments on social navigation, the results of which were summarised
 in a paper accepted to HRI 2019.</p>
