--- a/projects/artemis-apollo/index.html
+++ b/projects/artemis-apollo/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>John Macdonald</title>
+  <title></title>
   <link rel="stylesheet" href="/css/style.css" type="text/css">
   <link rel="stylesheet" href="/css/3-col-portfolio.css" type="text/css">
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-
   <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro" rel="stylesheet">
 
   <script type='text/javascript' src='/js/jquery.min.js'></script>
@@ -38,13 +36,13 @@
   <link rel='stylesheet' href='/css/carosel.css' type='text/css' media='all'> 
 
   
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109652169-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id="></script>
   <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'UA-109652169-1');
+  gtag('config', '');
   </script>
 </head>
 
@@ -175,13 +173,11 @@ control, computer vision, acoustic localization, and high level state
 machine logic. I focused almost all of energy on leading this project during my junior year of undergrad, save for
 enough time to get decent grades in classes. Leading the software team was one the most challenging, if not the most
 challenging, experience I have had thus far.</p>
-
 <p>I emphasized early integration and system-level testing. Our team had
 previously focused on task-level testing (such as, sorting of colored objects or shooting projectiles at targets). This lead to undiscovered
 failure modes when the vehicle executed sequences of tasks. One such failure mode, paired with an unduly strong
 assuption about course setup, directly lead to a sub-par performance
 in the RoboSub 2016 Finals and our placing third rather than first. Obviously, it was my goal for the team to place first, so this sort of failure was not acceptable.</p>
-
 <p>I viewed our secondary vehicle as crucial to our success. I saw that we had the
 technical capability to fix every issue we had encoutered during testing,
 but were vulnerable to new issues which appeared late in the development cycle.
@@ -194,7 +190,6 @@ order to enable position estimation on our small vehicle. An
 initial implementation worked well on indoor test data, but struggled
 underwater, where patterns of dancing light from surface waves can cause false
 motion. I continued reserach over the winter, but the problem persisted.</p>
-
 <p>At the beginning of the spring, I assessed the situation and decided to de-scope positional estimation on the minisub, therefore shelving my visual odometry development. I decided we needed to
 focus on bringing the new vehicles into a state where the core vehicle
 sensing and control was reliable and task-specific development could be reasonably
@@ -203,17 +198,14 @@ software team members who would be staying over
 the summer. We converged on a strategy in which our minisub would carry out
 tasks which did not require position estimation, with our larger sub carring out
 those that did, still enabling the benefits of a dual vehicle strategy while maintaining a resonable scope for our schedule.</p>
-
 <p>I therefore shifted from doing long-term research work to more short-term (6 month time horizon) work, and urged other team members to do the same. In one case, I had to de-scope a project to replace the vehicle operating system, which a team member strongly felt should be included. Trying to be delicate in this so as to balance the need for vehicle reliability and not discouraging innovation was the most challenging leadership decision I have ever made, and one which I did not take lightly. (It is now clear to me that had I not done this, the platform would not have been stable, and we would not have ultimately won the competition.)</p>
-
 <p>In particular, I focused on writing software to compensate
-for noise in our acoustic sensors needed for pinger localization and increase the speed at which the vehicle tracked pingers by roughly a factor of ten. (I was able to do this using, suprsingly, single-linkage clustering of incoming data to differentiate the correct data from outliers, an approach which had worked in the past.) At the same
+for noise in our acoustic sensors needed for pinger localization and increase the speed at which the vehicle tracked pingers by roughly a factor of ten. (I was able to due this using, suprsingly, single-linkage clustering of incoming data to differentiate the correct data from outliers, an approach which had worked in the past.) At the same
 time, I coordinated and worked on cross-subteam fixes to deal with
 minisub control instability caused by (1) our magentometer detecting
 electromagnetic interference from upgraded thrusters and
 (2) forward thrusters which exterted too much torque about the vehicle
 center of mass, creating roll and pitch moments which other thrusters were not able to counteract. A combination of fabricating mounts to move thrusters, modifying our Kalman filter, and ignoring our magentometer for sensor fusion solved the issue.</p>
-
 <p>With the work the team did over
 the summer (which I can take zero credit for, as I was interning at iRobot during this time), we managed to place first in RoboSub 2017. We achieved a
 semi-finals score which was higher than the next best team by a factor
