--- a/projects/kuri/index.html
+++ b/projects/kuri/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>John Macdonald</title>
+  <title></title>
   <link rel="stylesheet" href="/css/style.css" type="text/css">
   <link rel="stylesheet" href="/css/3-col-portfolio.css" type="text/css">
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-
   <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro" rel="stylesheet">
 
   <script type='text/javascript' src='/js/jquery.min.js'></script>
@@ -38,13 +36,13 @@
   <link rel='stylesheet' href='/css/carosel.css' type='text/css' media='all'> 
 
   
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109652169-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id="></script>
   <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'UA-109652169-1');
+  gtag('config', '');
   </script>
 </head>
 
