--- a/projects/thor-loki/index.html
+++ b/projects/thor-loki/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>John Macdonald</title>
+  <title></title>
   <link rel="stylesheet" href="/css/style.css" type="text/css">
   <link rel="stylesheet" href="/css/3-col-portfolio.css" type="text/css">
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-
   <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro" rel="stylesheet">
 
   <script type='text/javascript' src='/js/jquery.min.js'></script>
@@ -38,13 +36,13 @@
   <link rel='stylesheet' href='/css/carosel.css' type='text/css' media='all'> 
 
   
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109652169-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id="></script>
   <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'UA-109652169-1');
+  gtag('config', '');
   </script>
 </head>
 
@@ -245,7 +243,6 @@ segmentation to enable object detection invariant to lighting
 conditions and visual egomotion in order to caculate velocity without
 an expensive sonar sensor. I implemented simple proof-of-concept prototype
 algorithms for both of these.</p>
-
 <p>As the competition takes in July, some team members opt to stay
 on-campus over the summer to work on the robot. I opted to stay
 during Summer 2016 as a sophmore. I worked extensively on computer vision algorithms
@@ -258,7 +255,6 @@ that summer writing computer vision code, testing and collecting logs in the poo
 and revising and re-desgining code as needed to account for new failure
 modes, re-running against the collected log data, and finally
 re-testing in the pool.</p>
-
 <p>I had a fantastic experience attending RoboSub 2016, speaking with
 other teams about how they had approached the challenges and watching
 my code manuver the vehicle around the obstacle course. I was super
