--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="content" id="content">
         <h1 class='title'>John Macdonald</h1>
-<p class='subtitle'>I&#39;m a lifelong roboticist, especially excited by recent successes in applying deep learning to robotics</p>
+<p class='subtitle'>I&#39;m a roboticist who&#39;s passionate about making robots work well in the real world</p>
 
    
 	 <a href="https://twitter.com/jnmacdnld">Twitter</a>
